Tested and fixed bug related to answer endpoints